# dimini.sh

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.dev.yaml  docker-compose.yaml  main.py  pyproject.toml  settings.example.ini  test_runner.py
app/: routes.py  serializers.py
app/domain/: __init__.py  url.py
app/observers/: __init__.py  access_count.py
app/repositories/: url.py
app/services/: __init__.py  short_code_generator.py
app/use_cases/: __init__.py  create_short_code.py  get_short_code.py
lib/: __init__.py  random_string_generator.py
ops/: Dockerfile  docker-compose.dev.yaml  docker-compose.yaml  nginx.conf  prod.env
ops/ansible/inventories/: hosts.yaml
ops/ansible/playbooks/: clone-repo.yaml  create-user.yaml  docker-install.yaml  run-app.yaml
public/: index.html
public/css/: main.css
public/icons/: icon.vectornator
public/js/: main.js
requirements/: base.in  dev.in  dev.txt
tests/: __init__.py  fixtures.py  test_main.py  test_routes.py  utils.py
tests/test_domain/: __init__.py  test_url.py
tests/test_repositories/: __init__.py  test_url_repository.py
tests/test_services/: __init__.py  test_short_code_generator.py
tests/test_use_cases/: __init__.py  test_create_short_code.py  test_get_short_code.py
