[tool.poetry]
name = "dimini.sh"
version = "0.1.0"
description = "A url shortener service"
authors = ["Rômulo Collopy <romulo.collopyl@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.1"
motor = "^2.3.0"
python-decouple = "^3.3"
uvicorn = {git = "https://github.com/romulocollopy/uvicorn.git", rev = "fix/header-with-colon"}

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.6.1"
requests = "^2.24.0"
freezegun = "^1.0.0"
ipdb = "^0.13.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
